quizdle/src/pages/QuestionManager/QuestionManager.css
.container {
  padding: 40px;
  display: flex;
  min-height: 100vh;
  min-width: 80%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.form {
  background: white;
  padding: 30px 40px;
  border-radius: 20px;
  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
  width: 100%;
  max-width: 1000px;
}

.fragetext {
  justify-content: baseline;
}

.title {
  text-align: center;
  color: #0076ff;
  font-size: 24px;
  margin-bottom: 25px;
}

.question-row {
  display: flex;
  align-items: center;
  margin-bottom: 15px;
}

.question-input {
  flex: 1;
  padding: 10px 15px;
  border: 1px solid #ccc;
  border-radius: 10px;
  font-size: 16px;
}

.update-button {
  background-color: #4dcaff;
  color: white;
  border: none;
  padding: 10px 15px;
  border-radius: 10px;
  margin-left: 10px;
  cursor: pointer;
}

.delete-button {
  background-color: #ff4d4d;
  color: white;
  border: none;
  padding: 10px 15px;
  border-radius: 10px;
  margin-left: 10px;
  cursor: pointer;
}

.delete-button:hover {
  background-color: #e60000;
}

.button-row {
  display: flex;
  justify-content: space-between;
  margin-top: 25px;
}

.save-button {
  background-color: #0076ff;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 12px;
  cursor: pointer;
  font-size: 16px;
}

.save-button:hover {
  background-color: #005fd4;
}

.add-button {
  background-color: #21c55d;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 12px;
  cursor: pointer;
  font-size: 16px;
}

.add-button:hover {
  background-color: #16a34a;
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.4);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.modal {
  background: white;
  padding: 25px 30px;
  border-radius: 15px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
  text-align: center;
  width: 90%;
  max-width: 400px;
}

.modal-buttons {
  margin-top: 20px;
  display: flex;
  justify-content: space-around;
}

.modal-cancel {
  background-color: #ccc;
  color: black;
  border: none;
  padding: 10px 20px;
  border-radius: 10px;
  cursor: pointer;
}

.modal-confirm {
  background-color: #ff4d4d;
  color: white;
  border: none;
  padding: 10px 20px;
  border-radius: 10px;
  cursor: pointer;
}

.modal-cancel:hover {
  background-color: #999;
}

.modal-confirm:hover {
  background-color: #e60000;
}

